# quantedge

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  codecov.yml  release-please-config.json
.github/workflows/: ci.yml  publish-core.yml  publish.yml  release-please.yml
benches/: indicators.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/benches/: timeframe.rs
crates/core/src/: indicator.rs  instrument.rs  lib.rs  ohlcv.rs  price_source.rs  snapshots.rs  test_util.rs  timeframe.rs
crates/core/tests/: auto_traits.rs
crates/strategy/: CHANGELOG.md  Cargo.toml  README.md
crates/strategy/example/: Cargo.toml  README.md
crates/strategy/example/src/: e01_ema_cross_forming.rs  e02_htf_filtered_cross.rs  e03_ema_cross_closed.rs  e04_bollinger_breakout.rs  lib.rs
crates/strategy/src/: lib.rs  market_signal.rs  signal_generator.rs
crates/strategy/src/test_util/: enforcing_market_snapshot.rs  fake_engine.rs  fake_snapshots.rs  fixtures.rs  mod.rs  recording_market_signal_config.rs
crates/ta/: CHANGELOG.md  Cargo.toml  README.md
crates/ta/benches/: indicators.rs
crates/ta/example/: Cargo.toml  README.md
crates/ta/example/src/: binance_client.rs  main.rs  utils.rs
crates/ta/src/: lib.rs
crates/ta/src/indicators/: adx.rs  atr.rs  bb.rs  cci.rs  chop.rs  dc.rs  ema.rs  ichimoku.rs  kc.rs  kdj.rs  macd.rs  mod.rs  mom.rs  obv.rs  parabolic_sar.rs  rsi.rs  sma.rs  stoch.rs  stoch_rsi.rs  supertrend.rs  vwap.rs  willr.rs
crates/ta/src/internals/: bar_state.rs  ema_core.rs  mod.rs  price_source_extract.rs  price_window.rs  ring_buffer.rs  rolling_extremes.rs
crates/ta/tests/: reference_adx.rs  reference_atr.rs  reference_bb.rs  reference_cci.rs  reference_dc.rs  reference_ichimoku.rs  reference_kc.rs  reference_kdj.rs  reference_macd.rs  reference_mom.rs  reference_obv.rs  reference_parabolic_sar.rs  reference_stoch.rs  reference_stoch_rsi.rs  reference_supertrend.rs  reference_vwap.rs
crates/ta/tests/fixtures/: generate_reference.py  mod.rs
crates/ta/tests/fixtures/data/: atr-14.csv  cci-20.csv  kdj-9-3-3-close.csv  mom-10-close.csv  obv-close.csv  stoch-rsi-14-14-3-3-close.csv  supertrend-10-3.csv
example/: Cargo.toml  README.md  demo.tape
example/src/: binance_client.rs  main.rs
src/: ema.rs  ema_core.rs  indicator.rs  lib.rs  macd.rs
src/indicators/: adx.rs  atr.rs  bb.rs  cci.rs  chop.rs  dc.rs  ema.rs  ichimoku.rs  kc.rs  macd.rs  mod.rs  rsi.rs  sma.rs  stoch.rs  stoch_rsi.rs  supertrend.rs  vwap.rs  willr.rs
src/internals/: bar_state.rs  mod.rs  price_window.rs  ring_buffer.rs  rolling_extremes.rs  rolling_sum.rs
tests/: reference_adx.rs  reference_kc.rs  reference_supertrend.rs  reference_willr.rs
tests/fixtures/: generate_reference.py  mod.rs
tests/fixtures/data/: adx-14.csv  ichimoku-9-26-52-26.csv  kc-20-10-1.5.csv  vwap-day-hlc3.csv  willr-14.csv
