[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/ta"
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dluksza/quantedge"
authors = ["Darek Luksza <dariusz@luksza.org>"]

[workspace.dependencies]
quantedge-core = { version = "0.1.0", path = "crates/core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "fat"
codegen-units = 1
