[package]
name = "quantedge-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types shared across the quantedge crates"
keywords = ["trading", "finance", "ohlcv"]
categories = ["finance"]
readme = "README.md"

[lints]
workspace = true
