[package]
name = "quantedge-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types shared across the quantedge crates"
keywords = ["trading", "finance", "ohlcv"]
categories = ["finance"]
readme = "README.md"

[features]
test-util = []

[dev-dependencies]
chrono = "^0.4.0"
criterion = { version = "0.8", default-features = false, features = [
  "html_reports",
] }

[[bench]]
name = "timeframe"
harness = false

[lib]
bench = false

[lints]
workspace = true
