[package]
name = "quantedge-strategy"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
test-util = ["quantedge-core/test-util"]

[dependencies]
quantedge-core = { workspace = true }
quantedge-ta = { workspace = true }

[dev-dependencies]
quantedge-core = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
