[package]
name = "quantedge-strategy"
version = "0.0.1"
edition = "2024"
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trait surface and test harness for writing market-signal generators in the quantedge ecosystem"
keywords = ["trading", "finance", "signals", "strategy"]
categories = ["finance"]
readme = "README.md"

[features]
test-util = ["quantedge-core/test-util"]

[dependencies]
quantedge-core = { workspace = true }
quantedge-ta = { workspace = true }

[dev-dependencies]
quantedge-core = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
