[package]
name = "quantedge-ta"
version = "0.21.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A streaming technical analysis library for Rust"
keywords = ["technical-analysis", "trading", "indicators", "finance"]
categories = ["finance", "mathematics", "algorithms"]
readme = "README.md"
exclude = ["tests/"]

[dependencies]
quantedge-core = { workspace = true }

[dev-dependencies]
quantedge-core = { workspace = true, features = ["test-util"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.8", default-features = false, features = [
  "html_reports",
] }

[[bench]]
name = "indicators"
harness = false

[lib]
bench = false

[lints]
workspace = true
